stroy dom settings

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="color-scheme" content="light" />
     <meta name="theme-color" content="#ffffff" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <title>Аптека</title>
+    <title>СтройДом</title>
   </head>
   <body>
     <div id="app"></div>
